--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -239,6 +239,7 @@
   lab: |
     - [Lab 9 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab9/)_Due Thursday Nov 12th, 11:59PM on Gradescope_
     - [Lab 8 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab8/)
+
 - date: Thursday 11/12/20
   topic: Reinforcement Learning II
   resources: |
@@ -246,6 +247,11 @@
 
 - date: Tuesday 11/17/20
   topic: Nonparametric Methods
+  lab: |
+    - [Lab 10 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab10/)_Due Wednesday Nov 18th, 11:59PM on Gradescope_
+  discussion: |
+    - [Disc 11](assets/disc/disc11/DIS11.pdf)
+    - [Disc 11 Solutions](assets/disc/disc11/DIS11_SOL.pdf)
 
 - date: Thursday 11/19/20
   topic: Generalization, Robustness, Distribution Shift I
