--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -236,6 +236,8 @@
   discussion: |
     - [Disc 10](assets/disc/disc10/DIS10.pdf)
     - [Disc 10 Solutions](assets/disc/disc10/DIS10_SOL.pdf)
+  homework: |
+    - [HW 5 released](assets/hw/hw5/hw05.zip)
   lab: |
     - [Lab 9 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab9/)_Due Thursday Nov 12th, 11:59PM on Gradescope_
     - [Lab 8 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab8/)
