--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -260,6 +260,7 @@
 
 - date: Thursday 11/19/20
   topic: Generalization, Robustness, Distribution Shift I
+  slides: https://docs.google.com/presentation/d/1F_SdbM6NHBzdj-TVb3DNVPYpnsFkQ4vsNVb6omUk7ZA/edit#slide=id.p
 
 - date: Tuesday 11/24/20
   topic: Generalization, Robustness, Distribution Shift II
