--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -264,6 +264,9 @@
 
 - date: Tuesday 11/24/20
   topic: Generalization, Robustness, Distribution Shift II
+  discussion: |
+    - [Disc 12](assets/disc/disc12/DIS12.pdf)
+    - [Disc 12 Solutions](assets/disc/disc12/DIS12_SOL.pdf)
 
 - date: Thursday 11/26/20
   topic: "Thanksgiving Break"
