--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -265,6 +265,7 @@
 
 - date: Tuesday 11/24/20
   topic: Generalization, Robustness, Distribution Shift II
+  slides: https://docs.google.com/presentation/d/17RJp_2BubWwBOSkeivuVo3RFONz0NVx0rsOkMKgLrkU/edit#slide=id.ga3311be2fc_0_121
   discussion: |
     - [Disc 12](assets/disc/disc12/DIS12.pdf)
     - [Disc 12 Solutions](assets/disc/disc12/DIS12_SOL.pdf)
