add hw06 to website

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -269,6 +269,8 @@
   discussion: |
     - [Disc 12](assets/disc/disc12/DIS12.pdf)
     - [Disc 12 Solutions](assets/disc/disc12/DIS12_SOL.pdf)
+  homework: |
+    - [HW 6 released](assets/hw/hw6/hw06.zip)
   lab: |
     - No Lab Assignment this week
     - [Lab 10 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab10/)
