--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -280,6 +280,7 @@
 
 - date: Tuesday 12/1/20
   topic: Differential Privacy
+  slides: https://data102.org/fa19/assets/lectures/lecture23.pdf
   lab: |
     - [Lab 11 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab11/)_Due Thursday Dec 3rd, 11:59PM on Gradescope_
   discussion: |
